--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,42 +1,37 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+.body-color{
+    background-color: rgb(245, 239, 231);
+    /* background-image: url(../src/assets/images/green.webp); */
+    
+}
+.human-font{
+    /* font-family: 'Times New Roman', Times, serif;*/
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    letter-spacing: -0.055em;
+    line-height: 110px;
+    font-weight: 400;
+    font-size: 120px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.spacing-class{
+    letter-spacing: -0.055em;
+    
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.logo{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    letter-spacing: -0.09em;
+    font-weight: 500;
+    font-size: 40px;
+    
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.spinner {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    border: 9px solid #f1f2ff;
+    animation: spinner-bulqg1 0.8s infinite linear alternate,
+      spinner-oaa3wk 1.6s infinite linear;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
